--- a/index.html
+++ b/index.html
@@ -33,7 +33,26 @@
             z-index: 0;
         }
 
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            width: 100vw;
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            margin: 0 auto;
+            padding: 0;
+        }
+
         .img-content {
+            position: static;
+            top: unset;
+            left: unset;
+            transform: none;
+            margin: 0 auto;
             color: #fff;
             position: absolute;
             top: 40%;
@@ -75,40 +94,53 @@
         }
 
         .btn-custom {
-            background: rgba(255,255,255,0.15);
-            color: #fff;
-            font-size: 1.1rem;
-            padding: 12px 28px;
-            border-radius: 16px;
-            border: 1.5px solid rgba(255,255,255,0.25);
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
-            backdrop-filter: blur(8px) saturate(180%);
-            -webkit-backdrop-filter: blur(8px) saturate(180%);
-            transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
-            font-weight: 600;
-            letter-spacing: 0.07em;
-            width: 100%;
-            max-width: 180px;
-            min-width: 100px;
-            margin: 12px 0;
-            text-align: center;
             position: relative;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-family: "Kanit", sans-serif;
+            font-weight: 600;
+            font-size: 1.05rem;
+            padding: 12px 32px;
+            color: #fff;
+            background: rgba(255,255,255,0.08);
+            border: 1.5px solid rgba(255,255,255,0.5);
+            border-radius: 16px;
+            box-shadow:
+                inset 0 1px 0px rgba(255,255,255,0.75),
+                0 0 9px rgba(0,0,0,0.20),
+                0 3px 8px rgba(0,0,0,0.15);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             overflow: hidden;
+            transition: background 0.3s, box-shadow 0.3s, color 0.2s, transform 0.2s;
         }
-        .btn-custom::before {
+        .btn-custom::before,
+        .btn-custom::after {
             content: "";
             position: absolute;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: linear-gradient(120deg, rgba(255,255,255,0.35) 0%, rgba(255,255,255,0.05) 100%);
-            opacity: 0.7;
-            pointer-events: none;
+            inset: 0;
             border-radius: inherit;
+            pointer-events: none;
+            transition: opacity 0.3s;
+        }
+        .btn-custom::before {
+            background: linear-gradient(to bottom right, rgba(255,255,255,0.6), transparent 70%);
+            opacity: 0.7;
+            z-index: 1;
+        }
+        .btn-custom::after {
+            background: linear-gradient(to top left, rgba(255,255,255,0.3), transparent 70%);
+            opacity: 0.5;
+            z-index: 2;
         }
         .btn-custom:hover {
-            background: rgba(255,255,255,0.25);
-            box-shadow: 0 12px 32px 0 rgba(114,137,218,0.25), 0 1.5px 8px 0 rgba(255,255,255,0.15) inset;
-            transform: translateY(-2px) scale(1.05);
+            background: rgba(255,255,255,0.18);
             color: #232526;
+            transform: translateY(-2px) scale(1.05);
+            box-shadow:
+                0 12px 32px 0 rgba(114,137,218,0.22),
+                0 1.5px 8px 0 rgba(255,255,255,0.18) inset;
         }
 
         .join-discord {
@@ -139,10 +171,20 @@
             .img-content {
                 padding: 16px 8px 12px 8px;
                 border-radius: 14px;
-                top: 32%;
+                top: unset;
+                left: unset;
+                transform: none;
                 width: 90vw;
                 min-width: unset;
                 max-width: 98vw;
+                margin: 0 auto;
+                position: static;
+            }
+            .flex {
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
+                justify-content: center !important;
             }
             .ml13 {
                 font-size: 1.2em;
@@ -195,50 +237,71 @@
             border-radius: 16px;
             border: 1px solid rgba(255,255,255,0.18);
         }
+
+        /* ปุ่มโซเชียล glassmorphism */
+        .social-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 48px;
+            height: 48px;
+            margin: 0 6px;
+            border-radius: 50%;
+            background: rgba(255,255,255,0.12);
+            border: 1.5px solid rgba(255,255,255,0.22);
+            box-shadow: 0 4px 16px 0 rgba(31,38,135,0.12), 0 1.5px 8px 0 rgba(255,255,255,0.10) inset;
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+            transition: background 0.25s, box-shadow 0.25s, transform 0.18s;
+            font-size: 2rem;
+            color: #fff;
+            position: relative;
+            overflow: hidden;
+        }
+        .social-btn:hover {
+            background: rgba(255,255,255,0.28);
+            color: #7289da;
+            transform: scale(1.13) translateY(-2px);
+            box-shadow: 0 8px 32px 0 #7289da44, 0 1.5px 8px 0 #fff3 inset;
+        }
+        .social-btn i {
+            pointer-events: none;
+            font-size: 2rem;
+            transition: color 0.2s;
+        }
+        .social-btn {
+            text-decoration: none;
+        }
+        .social-btn:visited,
+        .social-btn:active,
+        .social-btn:focus,
+        .social-btn:hover {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
-    <div class="content" style="text-align: center; max-width: 100%; margin: 0 auto;">
+    <div class="content">
         <img id="myVideo" src="https://i.pinimg.com/originals/26/fd/49/26fd49fa54b204fbaf6301efefd53ae2.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
-        <div class="text-center img-content" style="padding: 10px;">
-            <img style="
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
-                object-fit: cover;
-                object-position: center;
-                animation: hvr-bob-float 1.5s infinite alternate;
-                " src="/Guitar.jpg" alt="MY BIO">
-            <div>
-                <h1 class="ml13">
+        <div class="img-content glass" style="max-width: 370px;">
+            <div class="flex flex-col items-center text-center">
+                <img src="/Guitar.jpg" alt="MY BIO"
+                    style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; object-position: center; margin-bottom: 16px; box-shadow: 0 2px 8px rgba(0,0,0,0.18);">
+                <h2 class="ml13" style="margin-bottom: 4px;">
                     <span class="letter">phumitch</span>
                     <span class="letter">discord</span>
-                </h1>
-            </div>
-
-            <div>
-                <center data-aos="fade-up" data-aos-delay="800" data-aos-duration="500">
-                    <hr style="width: 14%; height: 5px; margin-top: 10px;">
-                </center>
-                <div data-aos="fade-up" data-aos-delay="1000" data-aos-duration="500">
-                    <span class="txt-rotate" data-period="2000" data-rotate="[&quot;DISCORD: phumitch&quot;,&quot;phumitch | สนใจทำปกกดไอคอนdiscordมาเลย &quot;, &quot;THAILAND: บริการทำปก&quot;]"><span class="wrap">http</span></span>
+                </h2>
+                <p class="text-sm opacity-70 mb-3" style="margin-bottom: 12px;">THAILAND: บริการทำปก</p>
+                <div class="social-row mb-3">
+                    <a href="https://github.com/phumitch" target="_blank" class="social-btn"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/phumitchsomsri" target="_blank" class="social-btn"><i class="fab fa-facebook"></i></a>
+                    <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="social-btn"><i class="fab fa-discord"></i></a>
+                    <a href="https://www.youtube.com/@phxmitch_" target="_blank" class="social-btn"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/p_phumitch" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
                 </div>
+                <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn btn-custom mb-2" style="width:100%;">Join My Discord</a>
+                <a href="show.html" class="btn btn-custom" style="width:100%;">ชมผลงานของฉัน</a>
             </div>
-        </div>
-    </div>
-
-    <div class="join-discord">
-        <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn btn-custom">Join My Discord</a>
-        <a href="show.html" class="btn btn-custom">ชมผลงานของฉัน</a> <!-- ปุ่มใหม่ -->
-    </div>
-
-    <div class="content-social">
-        <div>
-            <a href="https://github.com/phumitch" target="_blank" class="btn hvr-buzz"><i class="fab fa-github" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.facebook.com/phumitchsomsri" target="_blank" class="btn hvr-buzz"><i class="fab fa-facebook" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://discord.gg/AfkR4a5T7g" target="_blank" class="btn hvr-buzz"><i class="fab fa-discord" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.youtube.com/@phxmitch_" target="_blank" class="btn hvr-buzz"><i class="fab fa-youtube" style="color:white;font-size:2rem;"></i></a>
-            <a href="https://www.instagram.com/p_phumitch" target="_blank" class="btn hvr-buzz"><i class="fab fa-instagram" style="color:white;font-size:2rem;"></i></a>
         </div>
     </div>
 
