--- a/show.html
+++ b/show.html
@@ -34,12 +34,27 @@
             z-index: 0;
         }
 
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            width: 100vw;
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            margin: 0 auto;
+            padding: 0;
+        }
+
         .img-content {
+            position: static;
+            top: unset;
+            left: unset;
+            transform: none;
+            margin: 0 auto;
             color: #fff;
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background: rgba(30, 30, 30, 0.45);
             box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
             backdrop-filter: blur(8px) saturate(120%);
@@ -76,40 +91,53 @@
         }
 
         .btn-custom {
-            background: rgba(255,255,255,0.15);
-            color: #fff;
-            font-size: 1.1rem;
-            padding: 12px 28px;
-            border-radius: 16px;
-            border: 1.5px solid rgba(255,255,255,0.25);
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
-            backdrop-filter: blur(8px) saturate(180%);
-            -webkit-backdrop-filter: blur(8px) saturate(180%);
-            transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
-            font-weight: 600;
-            letter-spacing: 0.07em;
-            width: 100%;
-            max-width: 180px;
-            min-width: 100px;
-            margin: 12px 0;
-            text-align: center;
             position: relative;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-family: "Kanit", sans-serif;
+            font-weight: 600;
+            font-size: 1.05rem;
+            padding: 12px 32px;
+            color: #fff;
+            background: rgba(255,255,255,0.08);
+            border: 1.5px solid rgba(255,255,255,0.5);
+            border-radius: 16px;
+            box-shadow:
+                inset 0 1px 0px rgba(255,255,255,0.75),
+                0 0 9px rgba(0,0,0,0.20),
+                0 3px 8px rgba(0,0,0,0.15);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             overflow: hidden;
+            transition: background 0.3s, box-shadow 0.3s, color 0.2s, transform 0.2s;
         }
-        .btn-custom::before {
+        .btn-custom::before,
+        .btn-custom::after {
             content: "";
             position: absolute;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: linear-gradient(120deg, rgba(255,255,255,0.35) 0%, rgba(255,255,255,0.05) 100%);
-            opacity: 0.7;
-            pointer-events: none;
+            inset: 0;
             border-radius: inherit;
+            pointer-events: none;
+            transition: opacity 0.3s;
+        }
+        .btn-custom::before {
+            background: linear-gradient(to bottom right, rgba(255,255,255,0.6), transparent 70%);
+            opacity: 0.7;
+            z-index: 1;
+        }
+        .btn-custom::after {
+            background: linear-gradient(to top left, rgba(255,255,255,0.3), transparent 70%);
+            opacity: 0.5;
+            z-index: 2;
         }
         .btn-custom:hover {
-            background: rgba(255,255,255,0.25);
-            box-shadow: 0 12px 32px 0 rgba(114,137,218,0.25), 0 1.5px 8px 0 rgba(255,255,255,0.15) inset;
-            transform: translateY(-2px) scale(1.05);
+            background: rgba(255,255,255,0.18);
             color: #232526;
+            transform: translateY(-2px) scale(1.05);
+            box-shadow:
+                0 12px 32px 0 rgba(114,137,218,0.22),
+                0 1.5px 8px 0 rgba(255,255,255,0.18) inset;
         }
 
         .join-discord {
@@ -139,43 +167,20 @@
             .img-content {
                 padding: 16px 8px 12px 8px;
                 border-radius: 14px;
-                top: 32%;
+                top: unset;
+                left: unset;
+                transform: none;
                 width: 90vw;
                 min-width: unset;
                 max-width: 98vw;
+                margin: 0 auto;
+                position: static;
             }
-            .ml13 {
-                font-size: 1.2em;
-            }
-            .btn-custom {
-                font-size: 1em;
-                padding: 10px 10px;
-                border-radius: 6px;
-                max-width: 300px;
-                min-width: 300px;
-                width: 90%;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 10px;
-            }
-            .join-discord {
-                top: 68%;
-                flex-direction: column;
-                width: 100vw;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-            .content-social {
-                padding: 10px 2px;
-                font-size: 0.9em;
-                border-radius: 0;
-            }
-            .content-social i {
-                font-size: 1.3rem !important;
-            }
-            #myVideo {
-                min-width: 100vw;
-                min-height: 100vh;
+            .flex {
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
+                justify-content: center !important;
             }
         }
 
@@ -199,46 +204,22 @@
 </head>
 
 <body id="body" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
-    <div class="content" style="text-align: center; max-width: 100%; margin: 0 auto;">
+    <div class="content">
         <img id="myVideo" src="https://i.pinimg.com/originals/b7/8d/94/b78d94b0562e52e4b0c6331c208d3cf3.gif" style="display: block; max-width: 100%; height: auto; margin: 0 auto;">
-        <div class="text-center img-content" style="padding: 10px;">
-            <img style="
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
-                object-fit: cover;
-                object-position: center;
-                animation: hvr-bob-float 1.5s infinite alternate;
-                " src="/Guitar.jpg" alt="เว็บผลงาน">
-            <div>
-                <h1 class="ml13">
+        <div class="img-content glass" style="max-width: 370px;">
+            <div class="flex flex-col items-center text-center">
+                <img src="/Guitar.jpg" alt="MY BIO"
+                    style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; object-position: center; margin-bottom: 16px; box-shadow: 0 2px 8px rgba(0,0,0,0.18);">
+                <h2 class="ml13" style="margin-bottom: 4px;">
                     <span class="letter">phumitch</span>
                     <span class="letter">ผลงานต่างๆ</span>
-                </h1>
-            </div>
-
-            <div>
-                <center data-aos="fade-up" data-aos-delay="800" data-aos-duration="500">
-                    <hr style="width: 14%; height: 5px; margin-top: 10px;">
-                </center>
-                <div data-aos="fade-up" data-aos-delay="1000" data-aos-duration="500">
-                    <span class="txt-rotate" data-period="2000" data-rotate="[&quot;DISCORD: phumitch&quot;,&quot;phumitch | สนใจทำปกกดไอคอนdiscordมาเลย &quot;, &quot;THAILAND: บริการทำปก&quot;]"><span class="wrap">http</span></span>
-                </div>
+                </h2>
+                <p class="text-sm opacity-70 mb-3" style="margin-bottom: 12px;">THAILAND: ผลงานของฉัน</p>
+                <a href="https://photos.app.goo.gl/MC6FRr4652S9E9pe9" class="btn btn-custom mb-2" style="width:100%;">กดเพื่อดูผลงานต่างๆ</a>
+                <a href="index.html" class="btn btn-custom" style="width:100%;">กดเพื่อกลับไปยังหน้าเริ่มต้น</a>
             </div>
         </div>
     </div>
-
-    <div class="join-discord">
-        <a href="https://photos.app.goo.gl/MC6FRr4652S9E9pe9" class="btn btn-custom">กดเพื่อดูผลงานต่างๆ</a>
-        <a href="index.html" class="btn btn-custom">กดเพื่อกลับไปยังหน้าเริ่มต้น</a> <!-- ปุ่มใหม่ -->   
-    </div>
-
-    <div class="content-social">
-        <div>
-            
-        </div>
-    </div>
-
     <script>
         $("#body").click(function() {
             var audio = new Audio('https://cdn.pixabay.com/audio/2023/07/30/audio_e0908e8569.mp3');
